iter_language/tests/corpus/valid/arg-default.iter
arg model = "gpt-4o"

queue memory

workspace local {
  base = "."
}

agent claude {
  mode = interactive
  command = "claude"
}

runner {
  agent = claude
  workspace = local
  queue = memory
  continue_on_error = false
  behavior = wait
  prompt = "Use {{arg.model}} for this task."
}
